@@ -7,17 +7,22 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * int (*H5E_auto1_t)(void* client_data);
+ * }
+ */
 public interface H5E_auto1_t {
 
-    int apply(java.lang.foreign.MemoryAddress client_data);
-    static MemorySegment allocate(H5E_auto1_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(H5E_auto1_t.class, fi, constants$107.H5E_auto1_t$FUNC, session);
+    int apply(java.lang.foreign.MemorySegment client_data);
+    static MemorySegment allocate(H5E_auto1_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$165.const$1, fi, constants$15.const$2, scope);
     }
-    static H5E_auto1_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _client_data) -> {
+    static H5E_auto1_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _client_data) -> {
             try {
-                return (int)constants$108.H5E_auto1_t$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_client_data);
+                return (int)constants$17.const$3.invokeExact(symbol, _client_data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
