@@ -7,17 +7,22 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * int (*H5L_elink_traverse_t)(char* parent_file_name,char* parent_group_name,char* child_file_name,char* child_object_name,unsigned int* acc_flags,long fapl_id,void* op_data);
+ * }
+ */
 public interface H5L_elink_traverse_t {
 
-    int apply(java.lang.foreign.MemoryAddress parent_file_name, java.lang.foreign.MemoryAddress parent_group_name, java.lang.foreign.MemoryAddress child_file_name, java.lang.foreign.MemoryAddress child_object_name, java.lang.foreign.MemoryAddress acc_flags, long fapl_id, java.lang.foreign.MemoryAddress op_data);
-    static MemorySegment allocate(H5L_elink_traverse_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(H5L_elink_traverse_t.class, fi, constants$37.H5L_elink_traverse_t$FUNC, session);
+    int apply(java.lang.foreign.MemorySegment parent_file_name, java.lang.foreign.MemorySegment parent_group_name, java.lang.foreign.MemorySegment child_file_name, java.lang.foreign.MemorySegment child_object_name, java.lang.foreign.MemorySegment acc_flags, long fapl_id, java.lang.foreign.MemorySegment op_data);
+    static MemorySegment allocate(H5L_elink_traverse_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$62.const$3, fi, constants$62.const$2, scope);
     }
-    static H5L_elink_traverse_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _parent_file_name, java.lang.foreign.MemoryAddress _parent_group_name, java.lang.foreign.MemoryAddress _child_file_name, java.lang.foreign.MemoryAddress _child_object_name, java.lang.foreign.MemoryAddress _acc_flags, long _fapl_id, java.lang.foreign.MemoryAddress _op_data) -> {
+    static H5L_elink_traverse_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _parent_file_name, java.lang.foreign.MemorySegment _parent_group_name, java.lang.foreign.MemorySegment _child_file_name, java.lang.foreign.MemorySegment _child_object_name, java.lang.foreign.MemorySegment _acc_flags, long _fapl_id, java.lang.foreign.MemorySegment _op_data) -> {
             try {
-                return (int)constants$37.H5L_elink_traverse_t$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_parent_file_name, (java.lang.foreign.Addressable)_parent_group_name, (java.lang.foreign.Addressable)_child_file_name, (java.lang.foreign.Addressable)_child_object_name, (java.lang.foreign.Addressable)_acc_flags, _fapl_id, (java.lang.foreign.Addressable)_op_data);
+                return (int)constants$62.const$4.invokeExact(symbol, _parent_file_name, _parent_group_name, _child_file_name, _child_object_name, _acc_flags, _fapl_id, _op_data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
