@@ -7,17 +7,22 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * void* (*H5MM_allocate_t)(unsigned long size,void* alloc_info);
+ * }
+ */
 public interface H5MM_allocate_t {
 
-    java.lang.foreign.Addressable apply(long size, java.lang.foreign.MemoryAddress alloc_info);
-    static MemorySegment allocate(H5MM_allocate_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(H5MM_allocate_t.class, fi, constants$124.H5MM_allocate_t$FUNC, session);
+    java.lang.foreign.MemorySegment apply(long size, java.lang.foreign.MemorySegment alloc_info);
+    static MemorySegment allocate(H5MM_allocate_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$207.const$0, fi, constants$206.const$5, scope);
     }
-    static H5MM_allocate_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (long _size, java.lang.foreign.MemoryAddress _alloc_info) -> {
+    static H5MM_allocate_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (long _size, java.lang.foreign.MemorySegment _alloc_info) -> {
             try {
-                return (java.lang.foreign.Addressable)(java.lang.foreign.MemoryAddress)constants$124.H5MM_allocate_t$MH.invokeExact((Addressable)symbol, _size, (java.lang.foreign.Addressable)_alloc_info);
+                return (java.lang.foreign.MemorySegment)constants$207.const$1.invokeExact(symbol, _size, _alloc_info);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
