@@ -7,17 +7,22 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * int (*H5P_prp_create_func_t)(char*,unsigned long,void*);
+ * }
+ */
 public interface H5P_prp_create_func_t {
 
-    int apply(java.lang.foreign.MemoryAddress _x0, long _x1, java.lang.foreign.MemoryAddress _x2);
-    static MemorySegment allocate(H5P_prp_create_func_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(H5P_prp_create_func_t.class, fi, constants$128.H5P_prp_create_func_t$FUNC, session);
+    int apply(java.lang.foreign.MemorySegment name, long size, java.lang.foreign.MemorySegment value);
+    static MemorySegment allocate(H5P_prp_create_func_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$221.const$2, fi, constants$17.const$4, scope);
     }
-    static H5P_prp_create_func_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress __x0, long __x1, java.lang.foreign.MemoryAddress __x2) -> {
+    static H5P_prp_create_func_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _name, long _size, java.lang.foreign.MemorySegment _value) -> {
             try {
-                return (int)constants$129.H5P_prp_create_func_t$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)__x0, __x1, (java.lang.foreign.Addressable)__x2);
+                return (int)constants$18.const$0.invokeExact(symbol, _name, _size, _value);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
