@@ -7,31 +7,23 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct __pthread_cond_s {
+ *     __atomic_wide_counter __wseq;
+ *     __atomic_wide_counter __g1_start;
+ *     unsigned int __g_refs[2];
+ *     unsigned int __g_size[2];
+ *     unsigned int __g1_orig_size;
+ *     unsigned int __wrefs;
+ *     unsigned int __g_signals[2];
+ * };
+ * }
+ */
 public class __pthread_cond_s {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.unionLayout(
-            Constants$root.C_LONG_LONG$LAYOUT.withName("__value64"),
-            MemoryLayout.structLayout(
-                Constants$root.C_INT$LAYOUT.withName("__low"),
-                Constants$root.C_INT$LAYOUT.withName("__high")
-            ).withName("__value32")
-        ).withName("__wseq"),
-        MemoryLayout.unionLayout(
-            Constants$root.C_LONG_LONG$LAYOUT.withName("__value64"),
-            MemoryLayout.structLayout(
-                Constants$root.C_INT$LAYOUT.withName("__low"),
-                Constants$root.C_INT$LAYOUT.withName("__high")
-            ).withName("__value32")
-        ).withName("__g1_start"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_refs"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_size"),
-        Constants$root.C_INT$LAYOUT.withName("__g1_orig_size"),
-        Constants$root.C_INT$LAYOUT.withName("__wrefs"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_signals")
-    ).withName("__pthread_cond_s");
     public static MemoryLayout $LAYOUT() {
-        return __pthread_cond_s.$struct$LAYOUT;
+        return constants$7.const$0;
     }
     public static MemorySegment __wseq$slice(MemorySegment seg) {
         return seg.asSlice(0, 8);
@@ -45,47 +37,69 @@ public class __pthread_cond_s {
     public static MemorySegment __g_size$slice(MemorySegment seg) {
         return seg.asSlice(24, 8);
     }
-    static final VarHandle __g1_orig_size$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__g1_orig_size"));
     public static VarHandle __g1_orig_size$VH() {
-        return __pthread_cond_s.__g1_orig_size$VH;
+        return constants$7.const$1;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * unsigned int __g1_orig_size;
+     * }
+     */
     public static int __g1_orig_size$get(MemorySegment seg) {
-        return (int)__pthread_cond_s.__g1_orig_size$VH.get(seg);
+        return (int)constants$7.const$1.get(seg);
     }
-    public static void __g1_orig_size$set( MemorySegment seg, int x) {
-        __pthread_cond_s.__g1_orig_size$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * unsigned int __g1_orig_size;
+     * }
+     */
+    public static void __g1_orig_size$set(MemorySegment seg, int x) {
+        constants$7.const$1.set(seg, x);
     }
     public static int __g1_orig_size$get(MemorySegment seg, long index) {
-        return (int)__pthread_cond_s.__g1_orig_size$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$7.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void __g1_orig_size$set(MemorySegment seg, long index, int x) {
-        __pthread_cond_s.__g1_orig_size$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$7.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __wrefs$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__wrefs"));
     public static VarHandle __wrefs$VH() {
-        return __pthread_cond_s.__wrefs$VH;
+        return constants$7.const$2;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * unsigned int __wrefs;
+     * }
+     */
     public static int __wrefs$get(MemorySegment seg) {
-        return (int)__pthread_cond_s.__wrefs$VH.get(seg);
+        return (int)constants$7.const$2.get(seg);
     }
-    public static void __wrefs$set( MemorySegment seg, int x) {
-        __pthread_cond_s.__wrefs$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * unsigned int __wrefs;
+     * }
+     */
+    public static void __wrefs$set(MemorySegment seg, int x) {
+        constants$7.const$2.set(seg, x);
     }
     public static int __wrefs$get(MemorySegment seg, long index) {
-        return (int)__pthread_cond_s.__wrefs$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$7.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void __wrefs$set(MemorySegment seg, long index, int x) {
-        __pthread_cond_s.__wrefs$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$7.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment __g_signals$slice(MemorySegment seg) {
         return seg.asSlice(40, 8);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
