@@ -7,53 +7,79 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct timeval {
+ *     __time_t tv_sec;
+ *     __suseconds_t tv_usec;
+ * };
+ * }
+ */
 public class timeval {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG_LONG$LAYOUT.withName("tv_sec"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("tv_usec")
-    ).withName("timeval");
     public static MemoryLayout $LAYOUT() {
-        return timeval.$struct$LAYOUT;
+        return constants$0.const$2;
     }
-    static final VarHandle tv_sec$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tv_sec"));
     public static VarHandle tv_sec$VH() {
-        return timeval.tv_sec$VH;
+        return constants$0.const$3;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * __time_t tv_sec;
+     * }
+     */
     public static long tv_sec$get(MemorySegment seg) {
-        return (long)timeval.tv_sec$VH.get(seg);
+        return (long)constants$0.const$3.get(seg);
     }
-    public static void tv_sec$set( MemorySegment seg, long x) {
-        timeval.tv_sec$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * __time_t tv_sec;
+     * }
+     */
+    public static void tv_sec$set(MemorySegment seg, long x) {
+        constants$0.const$3.set(seg, x);
     }
     public static long tv_sec$get(MemorySegment seg, long index) {
-        return (long)timeval.tv_sec$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$0.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void tv_sec$set(MemorySegment seg, long index, long x) {
-        timeval.tv_sec$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle tv_usec$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tv_usec"));
     public static VarHandle tv_usec$VH() {
-        return timeval.tv_usec$VH;
+        return constants$0.const$4;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * __suseconds_t tv_usec;
+     * }
+     */
     public static long tv_usec$get(MemorySegment seg) {
-        return (long)timeval.tv_usec$VH.get(seg);
+        return (long)constants$0.const$4.get(seg);
     }
-    public static void tv_usec$set( MemorySegment seg, long x) {
-        timeval.tv_usec$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * __suseconds_t tv_usec;
+     * }
+     */
+    public static void tv_usec$set(MemorySegment seg, long x) {
+        constants$0.const$4.set(seg, x);
     }
     public static long tv_usec$get(MemorySegment seg, long index) {
-        return (long)timeval.tv_usec$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$0.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void tv_usec$set(MemorySegment seg, long index, long x) {
-        timeval.tv_usec$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$4.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
