@@ -2,16 +2,23 @@
 
 package com.sunya.netchdf.mfhdfClib.ffm;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct hdf_ntinfo_t {
+ *     char type_name[9];
+ *     char byte_order[13];
+ * };
+ * }
+ */
 public class hdf_ntinfo_t {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.sequenceLayout(9, Constants$root.C_CHAR$LAYOUT).withName("type_name"),
-        MemoryLayout.sequenceLayout(13, Constants$root.C_CHAR$LAYOUT).withName("byte_order")
-    ).withName("hdf_ntinfo_t");
     public static MemoryLayout $LAYOUT() {
-        return hdf_ntinfo_t.$struct$LAYOUT;
+        return constants$122.const$0;
     }
     public static MemorySegment type_name$slice(MemorySegment seg) {
         return seg.asSlice(0, 9);
@@ -21,10 +28,10 @@ public class hdf_ntinfo_t {
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
