@@ -2,56 +2,84 @@
 
 package com.sunya.netchdf.mfhdfClib.ffm;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct {
+ *     long long quot;
+ *     long long rem;
+ * };
+ * }
+ */
 public class lldiv_t {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG_LONG$LAYOUT.withName("quot"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("rem")
-    );
     public static MemoryLayout $LAYOUT() {
-        return lldiv_t.$struct$LAYOUT;
+        return constants$8.const$2;
     }
-    static final VarHandle quot$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("quot"));
     public static VarHandle quot$VH() {
-        return lldiv_t.quot$VH;
+        return constants$38.const$1;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * long long quot;
+     * }
+     */
     public static long quot$get(MemorySegment seg) {
-        return (long)lldiv_t.quot$VH.get(seg);
+        return (long)constants$38.const$1.get(seg);
     }
-    public static void quot$set( MemorySegment seg, long x) {
-        lldiv_t.quot$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * long long quot;
+     * }
+     */
+    public static void quot$set(MemorySegment seg, long x) {
+        constants$38.const$1.set(seg, x);
     }
     public static long quot$get(MemorySegment seg, long index) {
-        return (long)lldiv_t.quot$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$38.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void quot$set(MemorySegment seg, long index, long x) {
-        lldiv_t.quot$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$38.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle rem$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("rem"));
     public static VarHandle rem$VH() {
-        return lldiv_t.rem$VH;
+        return constants$38.const$2;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * long long rem;
+     * }
+     */
     public static long rem$get(MemorySegment seg) {
-        return (long)lldiv_t.rem$VH.get(seg);
+        return (long)constants$38.const$2.get(seg);
     }
-    public static void rem$set( MemorySegment seg, long x) {
-        lldiv_t.rem$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet :
+     * long long rem;
+     * }
+     */
+    public static void rem$set(MemorySegment seg, long x) {
+        constants$38.const$2.set(seg, x);
     }
     public static long rem$get(MemorySegment seg, long index) {
-        return (long)lldiv_t.rem$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$38.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void rem$set(MemorySegment seg, long index, long x) {
-        lldiv_t.rem$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$38.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
