@@ -2,70 +2,97 @@
 
 package com.sunya.netchdf.netcdfClib.ffm;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * @snippet :
+ * struct {
+ *     size_t len;
+ *     void* p;
+ * };
+ * }
+ */
 public class nc_vlen_t {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG_LONG$LAYOUT.withName("len"),
-        Constants$root.C_POINTER$LAYOUT.withName("p")
-    );
     public static MemoryLayout $LAYOUT() {
-        return nc_vlen_t.$struct$LAYOUT;
+        return constants$9.const$5;
     }
     // added
     public static MemoryLayout VlenLayout() {
-        return nc_vlen_t.$struct$LAYOUT;
+        return constants$9.const$5;
     }
-    static final VarHandle len$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("len"));
+
     public static VarHandle len$VH() {
-        return nc_vlen_t.len$VH;
+        return constants$10.const$0;
     }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * size_t len;
+     * }
+     */
     public static long len$get(MemorySegment seg) {
-        return (long)nc_vlen_t.len$VH.get(seg);
-    }
-    public static void len$set( MemorySegment seg, long x) {
-        nc_vlen_t.len$VH.set(seg, x);
-    }
-    public static long len$get(MemorySegment seg, long index) {
-        return (long)nc_vlen_t.len$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$10.const$0.get(seg);
     }
     // added
     public static long getLength(MemorySegment seg, long index) {
-        return (long)nc_vlen_t.len$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$10.const$0.get(seg);
     }
-
+    /**
+     * Setter for field:
+     * @snippet :
+     * size_t len;
+     * }
+     */
+    public static void len$set(MemorySegment seg, long x) {
+        constants$10.const$0.set(seg, x);
+    }
+    public static long len$get(MemorySegment seg, long index) {
+        return (long)constants$10.const$0.get(seg.asSlice(index*sizeof()));
+    }
     public static void len$set(MemorySegment seg, long index, long x) {
-        nc_vlen_t.len$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$10.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle p$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("p"));
     public static VarHandle p$VH() {
-        return nc_vlen_t.p$VH;
+        return constants$10.const$1;
     }
-    public static MemoryAddress p$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)nc_vlen_t.p$VH.get(seg);
-    }
-    public static void p$set( MemorySegment seg, MemoryAddress x) {
-        nc_vlen_t.p$VH.set(seg, x);
-    }
-    public static MemoryAddress p$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)nc_vlen_t.p$VH.get(seg.asSlice(index*sizeof()));
+    /**
+     * Getter for field:
+     * @snippet :
+     * void* p;
+     * }
+     */
+    public static MemorySegment p$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment)constants$10.const$1.get(seg);
     }
     // added
-    public static MemoryAddress getAddress(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)nc_vlen_t.p$VH.get(seg.asSlice(index*sizeof()));
+    public static MemorySegment getAddress(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$10.const$1.get(seg);
     }
-
-    public static void p$set(MemorySegment seg, long index, MemoryAddress x) {
-        nc_vlen_t.p$VH.set(seg.asSlice(index*sizeof()), x);
+    /**
+     * Setter for field:
+     * @snippet :
+     * void* p;
+     * }
+     */
+    public static void p$set(MemorySegment seg, MemorySegment x) {
+        constants$10.const$1.set(seg, x);
+    }
+    public static MemorySegment p$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment)constants$10.const$1.get(seg.asSlice(index*sizeof()));
+    }
+    public static void p$set(MemorySegment seg, long index, MemorySegment x) {
+        constants$10.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
+    public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
